[package]
name = "nitron-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "*"
specs-derive = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image", "ttf"]

[dependencies.uuid]
version = "1.2.1"
features = ["v4","fast-rng","macro-diagnostics",]