[package]
name = "nitron-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.10.0"
log = "0.4"
specs = "*"
specs-derive = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image", "ttf"]

[dependencies.uuid]
version = "1.2.1"
features = ["v4","fast-rng","macro-diagnostics",]
